Prevent jump when timestamp is removed

--- a/common/app/assets/stylesheets/module/facia/_fromage.scss
+++ b/common/app/assets/stylesheets/module/facia/_fromage.scss
@@ -56,6 +56,9 @@
 
         @include mq(tablet) {
             position: static;
+            @include rem((
+                min-height: 16px // Prevent jump when timestamp is removed
+            ));
         }
     }
 }
